# vscp-firmware

./: .clang-format  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Doxyfile  HISTORY  README.md  changelog
.codacy/: codacy.yaml
.github/workflows/: tests.yml
arm/common/: cpumode.s  crt.c  divide.s  fiq.c  fiqlib.s  fiqtrap.s  heap.c  i2c.c  i2c.h  iolib.c  irq.c  irqlib.s  irqtrap.s  led.c  mem.c  mort.s  special_arm.c  special_arm.h  support.s  switrap.s  timer.c  undeftrap.s
arm/stm32/: dosubst.bat
arm/str/: dosubst.bat
avr/AAMega/: AAmega.aps  AAmega.atsln  AAmega.c  AAmega.cproj  AAmega.h  Make  MakefileMega  hardware.c  hardware.h  readme.txt  vscp_actions.c  vscp_actions.h  vscp_compiler.h  vscp_projdefs.h  vscp_registers.h
avr/AAMini/: AAmini.aps  AAmini.atsln  AAmini.c  AAmini.h  AAmini.hexample  Make  Makefile128  Makefile32  getting started win10.txt  getting started win8.txt  hardware.c  hardware.h  howto start.txt  readme.txt  uart.h  version.h  vscp_actions.c  vscp_actions.h  vscp_compiler.h  vscp_projdefs.h  vscp_registers.h
avr/AAboot/: AAboot.aps  AAboot.c  AAboot.componentinfo.xml  AAboot.cproj  AAboot128.hexample  AAboot_eeprom.hex  Make  Makefile128  aaboot.h  bootloader.c  bootloader.h  bootsupport.c  hardware.c  readme.txt  vscp_compiler.h  vscp_projdefs.h
avr/AAboot_Standard/: AAboot.aps  AAboot.c  AAboot128.hexample  Makefile128  Makefile32  ToDo.txt  aaboot.aws  aaboot.h  bootloader.c  bootloader.h  bootsupport.c  hardware.c  license.txt  readme.txt  version.h  vscp_compiler.h  vscp_projdefs.h  vscp_registers.h
avr/AT90CAN32_Latching_Relay/: readme.txt
avr/AT90CAN32_Temp_Humid/: readme.txt
avr/Template_AT90CAN32/: readme.txt  vscp_actions.c  vscp_actions.h  vscp_projdefs.h  vscptemplate.c
avr/common/: avr_macros.h  can_at90can128.c  can_at90can128.h  can_at90can32.c  can_at90can32.h  ds18x20.c  ds18x20.h  freertos_serial.c  freertos_serial.h  methods.c  methods.h  onewire.c  onewire.h  sja1000.c  sja1000.h  sja1000_basiccan.h  special_avr.c  special_avr.h  timer0.c  timer0.h  uart.c  uart.h
avr/demo_vscp_node_can128/: ConversionLog-06-11-2015 21-11-30.xml  Makefile  demo_vscp_node_can128.aps  demo_vscp_node_can128.atsln  demo_vscp_node_can128.atsuo  demo_vscp_node_can128.cproj  demo_vscp_node_can128.hex  demo_vscp_node_can128.pnproj  demo_vscp_node_can128.pnps  history.txt  main.c  main.h  readme.txt  version.h  vscp_actions.c  vscp_actions.h  vscp_compiler.h  vscp_projdefs.h  vscptest.c
avr/demo_vscp_node_can32/: can_at90can32.h  demo_vscp_node_can32.elf  demo_vscp_node_can32.hex  vscp_actions.c  vscp_class.h  vscp_firmware.h  vscp_type.h  vscptest.c
avr/digiprobe_gcc/: .gitignore  Makefile  avr_adc.c  avr_adc.h  avr_spi.c  avr_spi.h  digiprobe_gcc.aps  digiprobe_gcc.c  digiprobe_gcc.h  digiprobe_gcc.inc  digiprobe_gcc.pnproj  digiprobe_memory.c  digiprobe_system.c  digiprobe_system.h  digiprobe_work.c  digiprobe_work.h  licence.txt  mcp3550.c  mcp3550.h  mcp355xs.c  mcp355xs.h  readme.txt  vscp_compiler.h  vscp_mandatory.c  vscp_mandatory.h  vscp_projdefs.h  vscp_registers.h
avr/display3k_gcc/: Makefile  display3k_gcc.c  display3k_gcc.h  display3k_gcc.pnproj  display3k_imsgwork.c  display3k_system.h  localnode_registers.h  todo.txt  version.h  vscp_actions.c  vscp_actions.h  vscp_compiler.h  vscp_projdefs.h  vscp_registers.h
avr/ds18x20_demo/: Makefile  main.c  main.hex  onewire.c  uart.c  uart_addon.c
avr/freertos_can128_simple/: freertos_can128_simple.pnproj  freertos_can128_simple.pnps  main.c  readme.txt
avr/freertos_can128_test/: FreeRTOSConfig.h  Makefile  freertos_can128_test.pnproj  freertos_can128_test.pnps  old.Makefile  startice.bat
avr/hydrogen_RS-232_CAN/: async.c  async.h  avr_make_sym  can.h  hydrogen.c  hydrogen.cof  hydrogen.h  hydrogen.h_sym  (+12 more)
common/: 24lc1025.c  24lc1025.h  Doxyfile_all  aes.h  canal.h  crc.c  crc.h  crc8.c  crc8.h  dosfiles.html  fifo.c  fifo.h  firmware-level2.txt  history.txt  inttypes.h  mcp9800.c  mcp9800.h  rdcf2.txt  readme.txt  rprintf.c  vscp-aes.c  vscp-aes.h  vscp-binary-protocol.c  vscp-binary.c  vscp-binary.h  vscp-bootloader.c  vscp-bootloader.h  vscp-class.h  vscp-crc.c  vscp-crc.h  vscp-fifo.c  vscp-fifo.h  vscp-firmware-helper.c  vscp-firmware-helper.h  vscp-firmware-level2-callbacks.h  vscp-firmware-level2.c  vscp-firmware-level2.h  vscp-firmware.c  vscp-firmware.h  vscp-guid-parser.c  (+37 more)
contrib/: README.md
docs/: README.md  vscp-aes.md  vscp-binary.md  vscp-bootloader-host-sequence.md  vscp-bootloader.md  vscp-fifo.md  vscp-firmware-helper.md  vscp-firmware-level2.md  vscp-firmware.md  vscp-guid-parser.md  vscp-link-protocol.md  vscp-serial.md  vscp-ws1.md  vscp-ws2.md
linux/simulation/level2/server/multi/: CMakeLists.txt  multi-server.c
pic/: README
tests/: CMakeLists.txt  README.md  crc-unittest.cpp  crc8-unittest.cpp  esp_log.h  esp_log_buffer.h  fifo-unittest.cpp  unittest.cpp  vscp-aes-unittest.cpp  vscp-binary-unittest.cpp  vscp-bootloader-unittest.cpp  vscp-fifo-unittest.cpp  vscp-firmware-level2-unittest.cpp  vscp-firmware-unittest.cpp  vscp-guid-parser-unittest.cpp  vscp-link-protocol-unittest.cpp  vscp-projdefs.h  vscp-ws1-unittest.cpp  vscp-ws2-unittest.cpp
utils/: fifo.c  fifo.h
vscp_firmware/: README.md
(+7532 files in other folders)
